<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LgSvcCmdExploit</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="information">Information</string>
    <string name="not_detected">Not Detected</string>
    <string name="meid">MEID</string>
    <string name="mdn">MDN</string>
    <string name="msid">MSID</string>
    <string name="msl">MSL</string>
    <string name="nai">NAI</string>
    <string name="break_restore">Break / Restore</string>
    <string name="warning_message">This app can easily cause you to lose cell service...</string>
    <string name="warning">Warning</string>
    <string name="got_it">Got it</string>
    <string name="exit">Exit</string>
    <string name="results">Results</string>
    <string-array name="nai_array">
        <item>ibroke@theinternet.com</item>
        <item>internet@isbroken.com</item>
        <item>someone@someserver.com</item>
        <item>lgril@vulnerability.com</item>
        <item>exploit@lgril.com</item>
        <item>raab@remoteflasher.com</item>
    </string-array>

</resources>