<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:selectable="false"
        android:title="@string/information">
        <Preference
            android:key="meid"
            android:summary="@string/not_detected"
            android:title="@string/meid" />
        <Preference
            android:key="mdn"
            android:summary="@string/not_detected"
            android:title="@string/mdn" />
        <Preference
            android:key="msid"
            android:summary="@string/not_detected"
            android:title="@string/msid" />
        <Preference
            android:key="msl"
            android:summary="@string/not_detected"
            android:title="@string/msl" />
        <Preference
            android:key="nai"
            android:summary="@string/not_detected"
            android:title="@string/nai" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/break_restore">
        <Preference
            android:key="scramble"
            android:summary="Break things!"
            android:title="Scramble" />
        <Preference
            android:key="restore"
            android:summary="Restore your backed up values"
            android:title="Restore" />
    </PreferenceCategory>

</PreferenceScreen>